--- a/package.json
+++ b/package.json
@@ -2,5 +2,14 @@
   "name": "snapsell",
   "version": "0.0.1",
   "dependencies": {
+  },
+  "devDependencies": {
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
