--- a/snapsell-admin/package.json
+++ b/snapsell-admin/package.json
@@ -17,7 +17,15 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "commitizen": "^4.3.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
