--- a/storefront/package.json
+++ b/storefront/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.27.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "react-hot-toast": "^2.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
@@ -20,6 +22,10 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "commitizen": "^4.3.0"
+    "autoprefixer": "^10.4.14",
+    "commitizen": "^4.3.0",
+    "cypress": "^12.8.1",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
