--- a/.github/workflows/storefront.yml
+++ b/.github/workflows/storefront.yml
@@ -3,13 +3,18 @@ on: [pull_request, push]
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
+
     steps:
+
       - name: Checkout
         uses: actions/checkout@v3
+
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          build: cd storefront && npm run build
-          start: cd storefront && npm run dev
+          working-directory: ./storefront
+          build: npm run build
+          start: npm run dev
+
