--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -11,5 +11,6 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          build: npm run --prefix snapsell-admin build
-          start: npm run --prefix snapsell-admin dev
+          working-directory: ./snapsell-admin
+          build: npm run build
+          start: npm run dev
