--- a/storefront/package.json
+++ b/storefront/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "@tanstack/react-query": "^4.27.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
