--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "snapsell",
   "version": "0.0.1",
   "dependencies": {
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
+    "add": "^2.0.6",
+    "remove": "^0.1.5"
   },
   "devDependencies": {
     "commitizen": "^4.3.0",
