--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,20 +1,19 @@
-name: Storefront end-to-end tests
-on: [pull_request, push]
+name: Cypress Tests
+
+on: pull_request
+
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04
-
+    runs-on: ubuntu-latest
     steps:
-
       - name: Checkout
         uses: actions/checkout@v3
-
+        with:
+          fetch-depth: 2
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v5
+        uses: cypress-io/github-action@v5.4.0
         with:
-          working-directory: ./storefront
           build: npm run build
           start: npm run dev
-
