--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-select": "^1.2.1",
+    "dotenv": "^16.0.3",
     "dotenv-cli": "^7.1.0"
   },
   "packageManager": "npm@9.5.1",
