integrated FileUpload component which still needs to be hooked up

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-select": "^1.2.1",
     "dotenv": "^16.0.3",
-    "dotenv-cli": "^7.1.0"
+    "dotenv-cli": "^7.1.0",
+    "next-cloudinary": "^4.0.1"
   },
   "packageManager": "npm@9.5.1",
   "config": {
