--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-select": "^1.2.1",
     "dotenv-cli": "^7.1.0",
-    "next-cloudinary": "^4.0.1"
+    "next-cloudinary": "^4.0.1",
+    "react-chartjs-2": "^5.2.0",
+    "zod": "^3.21.4"
   },
   "packageManager": "npm@9.5.0",
   "config": {
