--- a/apps/admin/.env-example
+++ b/apps/admin/.env-example
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_APP_URL=
-NEXT_PUBLIC_STOREFRONT_URL=
-NEXTAUTH_URL=
-NEXTAUTH_SECRET=
+NEXT_PUBLIC_APP_URL=http://localhost:3001
+NEXTAUTH_URL=http://localhost:3001
+NEXT_PUBLIC_STOREFRONT_URL=http://localhost:3000
+NEXTAUTH_SECRET= // should be a string using `openssl rand -base64 32`
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 NEXT_PUBLIC_CLOUDINARY_API_KEY=
